--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.17.0",
+    "eslint-plugin-react": "^7.30.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
