--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "material-ui-confirm": "^3.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
